syntax = "proto3";

package dote.proto.action;

import "model/dote_entity.proto";

message AddPodcastRequest {
  string feedUrl = 1;
}

message AddPodcastResponse {
  model.DoteEntity dote_entity = 1;
}